# learning-python

argparse/: README.md
argparse/basic/: hexdec.py
argparse/complex/: clipmaker.py
argparse/raw/: ytdl.py
args/basic/: hexdec.py  main.py
args/complex/: clipmaker.py  config.py  main.py
args/raw/: dlvid.py  main.py
clipmaker/: config.py  main.py
clipmaker/utils/: custom_logger.py
configs/: config.ini  main.py  pyproject.toml
configs/advanced/: config.py  test.py
configs/basic/: main.py
configs/config_ini/: config.ini  config_ini.py
configs/config_json/: config.json  config_json.py
configs/config_loader/: config.ini  config.py  entities.py  main.py  pyproject.toml
configs/config_toml/: config.toml  config_toml.py
configs/config_yaml/: config_yaml.py
configs/entities/: config.py  entities.py
configs/ini/: config.ini  main.py  read_ini.py
configs/json_toml_yaml_ini/: main.py
database/basic/sqlite_basic_migrations/: README.md  pyproject.toml  test.sh
database/basic/sqlite_basic_migrations/basic_sqlite_migrations/: args.py  db.py  logger.py  main.py
database/basic/sqlite_basic_migrations/basic_sqlite_migrations/migrations/: 0001_create_table.sql  0002_add_description.sql
fmt/format_numbers/: main.py
gui/tkinter/: pb.py
http/crawler/: crawler.py  main.py  parser.py
http/download_eulers/: async.py  sync.py
http/sync/: sync.py
logging/basic/: basic_logger.py  log  tests.py
logging/custom/: main.py
mysql_storage/: config.py  country.py  db.sql  tests.py
playground/caching/: cache.py
subprocess/: print_dates.sh  sp.py
(+398 files in other folders)
